err/mtk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mtk'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1'...
Compiling './lib/python3.5/site-packages/mtk/amqp_0_9_1/channel.py'...
***   File "./lib/python3.5/site-packages/mtk/amqp_0_9_1/channel.py", line 424
    except MtkError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mtk/amqp_0_9_1/connection.py'...
***   File "./lib/python3.5/site-packages/mtk/amqp_0_9_1/connection.py", line 338
    except MtkError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Basic'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Channel'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Connection'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Exchange'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Queue'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Tx'...
Listing './lib/python3.5/site-packages/mtk/examples'...
Listing './lib/python3.5/site-packages/mtk/examples/amqp_0_9_1'...
Listing './lib/python3.5/site-packages/mtk-1.0b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
